# tick_tackun

./: .gitignore  Cargo.toml  LICENSE.md  README.md  config.json
migrations/: 20220206155136_tingling_words.sql
src/: group.rs  handler.rs  main.rs  sql.rs  tick_tackun.rs  token.rs
src/commands/: hello.rs  mod.rs  show_words.rs
