[package]
name = "tick_tackun"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license-file = "LICENSE.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indoc = "1.0.3"
serde = "1.0.136"
serde_json = "1.0.78"
serenity = "0.10.10"
tokio = {version = "1.16.1", features = ["macros", "rt-multi-thread"]}
